--- a/style.css
+++ b/style.css
@@ -1,61 +1,37 @@
-body{
-    background-color: #FF3333;
-    margin: 0;
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-div {
-    width: 1024px;
-    margin: 0px auto;
-    background-color: #FFE533;
-    padding-bottom: 20px;
+input[type=submit] {
+  background-color: #c50e0e;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-img {
-    width: 100%;
-    height: 100%;
-	padding:20px; 
+input[type=submit]:hover {
+  background-color: #a50d0d;
 }
 
-div.home{
-background-color:C1C1C1;
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
 
-#menu {
-	text-align:center; 
-    float: right;
-    width: 100%;
-    padding: 0;
-    margin: 0 0 1em 0;
-    list-style-type: none;
-    background-color: #000;
-}
-/*#menus li { display:inline }*/
-
-#menu a {
-  float:left;
-  padding: 0.25em 1em;
-  margin: 0.25em 0 0.25em 1em;
-  color: #DDD;
-  text-decoration: none;
-}
-#menu a:hover { background-color:#333}
-
-p#paragraph1 {
-    clear:left;
-}
-
-a#button {
-    color: #5C74C8;
-    padding: 3px 5px 1px 25px;
-    background: url("buttons.png") no-repeat 6px 6px #ECEEF5;
-    border: 1px solid #CAD4E7;
-    border-radius: 5px;
-    text-decoration: none;
-}
-
-h1, p {
-    margin-left: 20px;
-	width:auto; 
-	text-align:center; 
-	padding:20px; 
+.fakeimg {
+  height: 200px;
+  background: #aaa;
 }
